Removed erroneous param

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,5 @@ steps:
   inputs:
     azureSubscription: $(SERVICE_CONNECTION)
     ScriptPath: scripts/Deploy-StaticWebsite.ps1
-    ScriptArguments: -LocationName $(LOCATION_NAME) -ResourceGroupName $(RESOURCE_GROUP_NAME) -StorageAccountName $(STORAGE_ACCOUNT_NAME) -ContentRelativePath $(CONTENT_RELATIVE_PATH) -DomainFqdn $(DOMAIN_FQDN) -PARAM $(VARIABLE)
+    ScriptArguments: -LocationName $(LOCATION_NAME) -ResourceGroupName $(RESOURCE_GROUP_NAME) -StorageAccountName $(STORAGE_ACCOUNT_NAME) -ContentRelativePath $(CONTENT_RELATIVE_PATH) -DomainFqdn $(DOMAIN_FQDN)
     azurePowerShellVersion: LatestVersion
