--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,11 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# Deploy Azure Static Website
+#
+# Author:  Adam Rush
+# Blog:    https://adamrushuk.github.io
+# GitHub:  https://github.com/adamrushuk
+# Twitter: @adamrushuk
+#
+# YAML schema reference: https://aka.ms/yaml
 
 trigger:
   batch: true
@@ -15,7 +19,6 @@ variables:
   # Main vars
   VM_IMAGE: ubuntu-16.04
   SERVICE_CONNECTION: arm_sc01
-  # GENERIC_SERVICE_CONNECTION: generic_sc_www.virtuallyimpossible.co.uk
   LOCATION_NAME: eastus
   RESOURCE_GROUP_NAME: old-blog-rg
   STORAGE_ACCOUNT_NAME: virtuallyimpossiblecouk
@@ -40,7 +43,12 @@ stages:
       inputs:
         azureSubscription: $(SERVICE_CONNECTION)
         ScriptPath: scripts/Deploy-StaticWebsite.ps1
-        ScriptArguments: -LocationName $(LOCATION_NAME) -ResourceGroupName $(RESOURCE_GROUP_NAME) -StorageAccountName $(STORAGE_ACCOUNT_NAME) -ContentRelativePath $(CONTENT_RELATIVE_PATH) -DomainFqdn $(DOMAIN_FQDN)
+        ScriptArguments: |-
+          -LocationName $(LOCATION_NAME)
+          -ResourceGroupName $(RESOURCE_GROUP_NAME)
+          -StorageAccountName $(STORAGE_ACCOUNT_NAME)
+          -ContentRelativePath $(CONTENT_RELATIVE_PATH)
+          -DomainFqdn $(DOMAIN_FQDN)
         azurePowerShellVersion: LatestVersion
 
     - task: PowerShell@2
@@ -48,7 +56,13 @@ stages:
       inputs:
         targetType: filePath
         filePath: scripts/Update-Dns.ps1
-        arguments: -DomainName $(DOMAIN_NAME) -RecordType "CNAME" -RecordName "www" -RecordValue $(PRIMARY_ENDPOINT) -ApiKey $(DNS_API_KEY) -ApiSecret $(DNS_API_SECRET)
+        arguments: |-
+          -DomainName $(DOMAIN_NAME)
+          -RecordType "CNAME"
+          -RecordName "www"
+          -RecordValue $(PRIMARY_ENDPOINT)
+          -ApiKey $(DNS_API_KEY)
+          -ApiSecret $(DNS_API_SECRET)
         pwsh: true
 
     - task: PowerShell@2
@@ -56,7 +70,10 @@ stages:
       inputs:
         targetType: filePath
         filePath: scripts/Wait-StaticWebsiteCnameReady.ps1
-        arguments: -DomainFqdn $(DOMAIN_FQDN) -WaitForStatusCode 400 -TimeoutSeconds 240
+        arguments: |-
+           -DomainFqdn $(DOMAIN_FQDN)
+           -WaitForStatusCode 400
+           -TimeoutSeconds 240
         pwsh: true
       continueOnError: true
 
@@ -65,6 +82,9 @@ stages:
       inputs:
         azureSubscription: $(SERVICE_CONNECTION)
         ScriptPath: scripts/Set-CustomDomain.ps1
-        ScriptArguments: -ResourceGroupName $(RESOURCE_GROUP_NAME) -StorageAccountName $(STORAGE_ACCOUNT_NAME) -DomainFqdn $(DOMAIN_FQDN)
+        ScriptArguments: |-
+          -ResourceGroupName $(RESOURCE_GROUP_NAME)
+          -StorageAccountName $(STORAGE_ACCOUNT_NAME)
+          -DomainFqdn $(DOMAIN_FQDN)
         azurePowerShellVersion: LatestVersion
       condition: succeededOrFailed()
