--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,14 +52,6 @@ stages:
         azurePowerShellVersion: LatestVersion
 
     - task: AzureCLI@1
-      displayName: "Azure CLI: Output ENV vars"
-      inputs:
-        azureSubscription: $(SERVICE_CONNECTION)
-        scriptLocation: 'inlineScript'
-        inlineScript: >
-          env
-
-    - task: AzureCLI@1
       displayName: "Azure CLI: Upload blob content"
       inputs:
         azureSubscription: $(SERVICE_CONNECTION)
@@ -68,7 +60,7 @@ stages:
           az storage blob upload-batch
           --destination '$web'
           --account-name "$(STORAGE_ACCOUNT_NAME)"
-          --source "$(CONTENT_RELATIVE_PATH)/*"
+          --source "$(BUILD_SOURCESDIRECTORY)/$(CONTENT_RELATIVE_PATH)/*"
 
     - task: PowerShell@2
       displayName: "PowerShell Script: Update DNS A Record"
