--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,11 +56,7 @@ stages:
       inputs:
         azureSubscription: $(SERVICE_CONNECTION)
         scriptLocation: 'inlineScript'
-        inlineScript: >
-          az storage blob upload-batch
-          --destination '$web'
-          --account-name "$(STORAGE_ACCOUNT_NAME)"
-          --source "$(BUILD_SOURCESDIRECTORY)/$(CONTENT_RELATIVE_PATH)/*"
+        inlineScript: az storage blob upload-batch --destination '$web' --account-name "$(STORAGE_ACCOUNT_NAME)" --source "$(BUILD_SOURCESDIRECTORY)/$(CONTENT_RELATIVE_PATH)/*"
 
     - task: PowerShell@2
       displayName: "PowerShell Script: Update DNS A Record"
