--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,11 @@ stages:
       inputs:
         azureSubscription: $(SERVICE_CONNECTION)
         scriptLocation: 'inlineScript'
-        inlineScript: az storage blob upload-batch --account-name "$(STORAGE_ACCOUNT_NAME)" --source "$(CONTENT_RELATIVE_PATH)" --destination '$web'
+        inlineScript: >
+          az storage blob upload-batch
+          --account-name "$(STORAGE_ACCOUNT_NAME)"
+          --source "$(CONTENT_RELATIVE_PATH)"
+          --destination '$web'
 
     - task: PowerShell@2
       displayName: "PowerShell Script: Update DNS A Record"
