--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ variables:
   # Main vars
   VM_IMAGE: ubuntu-16.04
   SERVICE_CONNECTION: arm_sc01
-  LOCATION_NAME: eastus
+  LOCATION_NAME: uksouth
   RESOURCE_GROUP_NAME: old-blog-rg
   STORAGE_ACCOUNT_NAME: virtuallyimpossiblecouk
   CONTENT_RELATIVE_PATH: content
